# computer-use-anywhere

./: .gitignore  CHANGELOG.md  LICENSE  README.md  computer_use.py
claude-computer-use-proxy/: README.md  pyproject.toml  run.py
claude-computer-use-proxy/src/claude_computer_use_proxy/: agent.py  browser_dom.py  provider.py  runtime_diagnostics.py  ui.py  windows_control.py
claude-computer-use-proxy/tests/: test_agent.py  test_provider.py
scripts/: build_exe.ps1
src/claude_computer_use_proxy/: __init__.py  models.py  replay.py
tests/: test_browser_dom.py  test_replay.py  test_runtime_diagnostics.py  test_windows_control.py
